# backend_fastapi

./: database.db  pyproject.toml
fast_api_back_project/: app.py  database.py
migrations/: env.py
migrations/versions/: 7cbeccdee154_teste_nova_migração.py  9ea05eff1932_create_users_table.py
tests/: conftest.py  test_app.py  test_db.py
