[tool.poetry]
name = "fast-api-back-project"
version = "0.1.0"
description = ""
authors = ["Luis Carlos Bezera <luiscarlossilvabezerra@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.12.*"
fastapi = {extras = ["standard"], version = "^0.115.12"}
pydantic-settings = "^2.9.1"
sqlalchemy = "^2.0.41"
alembic = "^1.16.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.11.12"
pytest = "^8.4.0"
pytest-cov = "^6.1.1"
taskipy = "^1.14.1"

[tool.taskipy.tasks]
run = 'fastapi dev fast_api_back_project/app.py'
pre_test = 'task lint'
test = 'pytest -s -x --cov=fast_api_back_project -vv'
post_test = 'coverage html'
lint = 'ruff check . && ruff check . --diff'
format = 'ruff check . --fix && ruff format .'

[tool.ruff]
line-length = 79
extend-exclude = ['migrations']

[tool.ruff.lint]
preview = true
select = ['I', 'F', 'E', 'W', 'PL', 'PT']

[tool.ruff.format]
preview = true
quote-style = 'single'

[tool.pytest.ini_options]
pythonpath = "."
addopts = '-p no:warnings'

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
